# deskpet

./: .gitignore  CHANGELOG.md  HANDOFF.md  README.md  config.toml
.claude/: launch.json  settings.local.json
.github/workflows/: release.yml
backend/: bench_bge_m3_real.json  bench_phase4.json  bench_phase4_full_stack.json  config.py  context.py  deskpet-backend.spec  main.py  p4_ipc.py  paths.py  provider_test_connection.py  pyproject.toml
backend/agent/: agent_loop.py  task_id.py  tool_use_shim.py
backend/agent/providers/: base.py  simple_llm.py  tool_using.py
backend/billing/: ledger.py
backend/deskpet/: __init__.py
backend/deskpet/agent/: __init__.py  context_compressor.py
backend/deskpet/agent/assembler/: __init__.py  assembler.py  budget.py  bundle.py  classifier.py  policy.py  registry.py  tts_prenarration.py
backend/deskpet/agent/assembler/components/: __init__.py  base.py  memory.py  persona.py  skill.py  time_component.py  tool.py  workspace.py
backend/deskpet/agent/assembler/policies/: __init__.py  default.yaml  exemplars.jsonl
backend/deskpet/llm/: __init__.py
backend/deskpet/mcp/: __init__.py  bootstrap.py  manager.py
backend/deskpet/memory/: __init__.py  embedder.py  embedder_worker.py  file_memory.py  manager.py  migrator.py  retriever.py  schema.py  session_db.py  vector_worker.py
backend/deskpet/memory/migrations/: 001_p4_initial_v9.sql  __init__.py
backend/deskpet/permissions/: __init__.py  gate.py
backend/deskpet/plugins/: __init__.py  manager.py
backend/deskpet/skills/: __init__.py  loader.py
backend/deskpet/skills/builtin/: __init__.py
backend/deskpet/skills/builtin/recall-yesterday/: SKILL.md
backend/deskpet/skills/builtin/summarize-day/: SKILL.md
backend/deskpet/skills/builtin/weather-report/: SKILL.md
backend/deskpet/skills/marketplace/: __init__.py  installer.py  registry_client.py  safety.py
backend/deskpet/skills/parser/: __init__.py  parse_skill_md.py
backend/deskpet/tools/: __init__.py  _config.py  error_classifier.py  file_tools.py  registry.py  stubs.py  todo_tools.py  tool_search.py  web_tools.py
backend/deskpet/tools/os_tools/: __init__.py  desktop_create_file.py  edit_file.py  list_directory.py  read_file.py  registration.py  run_shell.py  web_fetch.py  write_file.py
backend/deskpet/types/: __init__.py  skill_platform.py
backend/llm/: __init__.py  anthropic_adapter.py  base.py  budget.py  errors.py  gemini_adapter.py  keys.py  openai_adapter.py  pricing.py  registry.py  types.py
backend/memory/: base.py  conversation.py  migrator.py  sensitive_filter.py
backend/memory/migrations/: 001_initial.sql  __init__.py
backend/observability/: crash_reports.py  metrics.py  startup.py  vram.py
backend/pipeline/: barge_in_filter.py  tag_parser.py  voice_pipeline.py
backend/providers/: base.py  cosyvoice_tts.py  edge_tts_provider.py  faster_whisper_asr.py  ollama_llm.py  openai_compatible.py  silero_vad.py
backend/router/: __init__.py  hybrid_router.py  types.py
backend/scripts/: bench_phase4.py  bench_phase4_full_stack.py  download_bge_m3.py  e2e_marketplace_real.py  e2e_stage_a.py  e2e_stage_a_full.py  e2e_stage_a_live.py  e2e_stage_a_ws.py  e2e_stage_d.py  migrate_memory_db_to_state_db.py  scaffold_plugin.py  smoke_chat.py  smoke_chat_cloud.py  smoke_deskpet_embedder.py  smoke_deskpet_llm.py  smoke_deskpet_migrator.py  smoke_deskpet_tools.py
backend/scripts/perf/: ttft_cloud.py
backend/tests/: test_agent_provider.py  test_asr_short_audio.py  test_billing_ledger.py  test_cloud_api_key_resolve.py  test_config.py  test_config_asr.py  test_config_billing.py  test_config_cloud_endpoint.py  test_config_resolution.py  test_config_voice.py  test_context.py  test_cosyvoice_provider.py  test_deskpet_agent_loop.py  test_deskpet_context_assembler.py  test_deskpet_context_compressor.py  test_deskpet_embedder.py  test_deskpet_file_memory.py  test_deskpet_llm_adapters.py  test_deskpet_llm_budget.py  test_deskpet_llm_keys.py  test_deskpet_llm_registry.py  test_deskpet_llm_types.py  test_deskpet_mcp_manager.py  test_deskpet_memory_integration.py  test_deskpet_memory_manager.py  test_deskpet_memory_migrator.py  test_deskpet_p4_ipc.py  test_deskpet_p4_s14_assembler_hook.py  test_deskpet_p4_s15_full_stack.py  test_deskpet_p4_wire_in.py  test_deskpet_retriever.py  test_deskpet_session_db.py  test_deskpet_session_db_hook.py  test_deskpet_session_db_perf.py  test_deskpet_skills_loader.py  test_deskpet_tools_file.py  test_deskpet_tools_registry.py  test_deskpet_tools_search.py  test_deskpet_tools_web.py  test_deskpet_vector_worker.py  (+38 more)
backend/tools/: base.py  clipboard.py  get_time.py  registry.py  reminder.py
docs/: INDEX.md  P2-2-realtime-duplex-voice-architecture.md  P3-S10-installer-smoke-runbook.md  P3-S10-smoke-report-rc1.md  P3-rc2-backlog.md  P4-S18-bge-m3-segfault.md  P4-agent-harness-prd.md  PACKAGING.md  PERFORMANCE.md  PERMISSIONS.md  PLUGINS.md  RELEASE.md  SKILLS.md
docs/EVIDENCE/: skill-platform-v1.md
docs/releases/: v0.5.0-phase3-rc1.md
docs/superpowers/: STATE.md
plans/: gemma4_desktop_pet_phase1_plan_v2.docx  gemma4_desktop_pet_phase1_plan_v3.docx  gemma4_desktop_pet_phase1_plan_v4.docx  gemma4_desktop_pet_phase1_plan_v5.docx
scripts/: build_backend.ps1  check_no_hardcoded_assets.py  e2e_frozen_tauri.ps1  e2e_smoke.py  e2e_smoke_phase2.py  e2e_smoke_phase3.py  rebuild-icons.ps1  release.ps1  setup_ffmpeg.ps1  setup_user_data.ps1  smoke_frozen_backend.py  smoke_vm_degraded.ps1
scripts/e2e/: drive_esc_interrupt.py  drive_full_ui.py  drive_text_chat.py  drive_via_cdp.py  e2e_memory_all_sessions.py  e2e_memory_panel.py  (+3 more)
tauri-app/: index.html  package-lock.json  package.json  vite.config.ts
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/icons-src/: README.md
tauri-app/src-tauri/src/: backend_launch.rs  click_through.rs  crash_reports.rs  gpu_check.rs  lib.rs  main.rs  paths.rs  process_manager.rs  secrets.rs  user_data.rs  webview_permissions.rs
(+137 files in other folders)
