[project]
name = "deskpet-backend"
version = "0.5.0-phase3-rc1"
description = "Desktop Pet AI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "tomli>=2.0",
    "structlog>=24.0",
    "httpx>=0.27.0",
    "ollama>=0.4.0",
    "aiosqlite>=0.22.1",
    # P2-0-S4: scripts/perf/rss_sampler.py uses psutil to watch process RSS.
    "psutil>=5.9.0",
    # P2-1-S6: /metrics endpoint exposes TTFT Histogram.
    "prometheus-client>=0.25.0",
    # P2-1-S8: zoneinfo needs a tz database on Windows (no system
    # /usr/share/zoneinfo). tzdata ships the IANA data as a wheel. Harmless
    # no-op on Linux/macOS where the system DB is used by default.
    "tzdata>=2024.1 ; sys_platform == 'win32'",
    # P3-S4: silero-vad PyPI package ships the JIT model as package
    # data. Previously we loaded via torch.hub which requires network +
    # ~/.cache/torch/hub — both broken inside a frozen PyInstaller exe.
    "silero-vad>=5.1.2,<6",
    # P3-S6+S7: user data / cache dir resolution (%AppData%\deskpet\,
    # %LocalAppData%\deskpet\). platformdirs is pure Python (~20KB),
    # PyInstaller-friendly, and handles Windows/macOS/Linux uniformly.
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    # P3-S4: PyInstaller is a build-time dep, not runtime — kept in
    # dev extras so the frozen wheel doesn't ship the bootloader source.
    "pyinstaller>=6.11",
    "pyinstaller-hooks-contrib>=2024.8",
]

[tool.setuptools]
py-modules = ["config", "main"]
packages = ["providers", "memory", "memory.migrations", "tests", "agent", "pipeline", "tools", "observability", "router", "billing"]

[tool.setuptools.package-data]
"memory.migrations" = ["*.sql"]
