[package]
name = "deskpet"
version = "0.2.0"
description = "A desktop pet application"
authors = ["you"]
edition = "2021"

[lib]
name = "deskpet_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# W5 (R17): self-update. pubkey configured in tauri.conf.json.
tauri-plugin-updater = "2"
# W5 (R17): run on login — let the user opt-in via system tray later.
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.6"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
