[package]
name = "deskpet"
version = "0.5.0-phase3-rc1"
description = "A desktop pet application"
authors = ["you"]
edition = "2021"

[lib]
name = "deskpet_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# W5 (R17): self-update. pubkey configured in tauri.conf.json.
tauri-plugin-updater = "2"
# W5 (R17): run on login — let the user opt-in via system tray later.
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.6"
# P2-1-S3: cloud LLM API key 持久化在 OS keychain。
# 需要显式启用平台原生 backend (v3 不再默认启用任何 backend)。
# 三平台 feature 互不干扰 —— 每个 cfg 只编译相关代码。
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
# P3-S2: NVIDIA precheck. Uses the NVIDIA Management Library (loaded via
# nvml.dll on Windows — bundled with every NVIDIA driver, no CUDA
# Toolkit needed). Happy path returns GPU info; any init/query failure
# means we pop a dialog and exit instead of spawning the backend.
nvml-wrapper = "0.10"
# P3-S2: blocking MessageDialog for the "no NVIDIA GPU" fatal-error
# path. Default feature set is enough — we only need MessageDialog.
tauri-plugin-dialog = "2"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
